--- a/package.json
+++ b/package.json
@@ -22,12 +22,13 @@
   "main": "src/main.js",
   "dependencies": {
     "underscore": "*",
-    "mysql":"*",
-    "level" : "*"
+    "mysql": "*",
+    "level": "*"
   },
-  "devDependencies" : {
-    "docco":"*",
-    "nodeunit":"*"
+  "devDependencies": {
+    "docco": "*",
+    "nodeunit": "*",
+    "travis-lint": "0.0.4"
   },
   "engines": {
     "node": ">=0.10.x",
