--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "npm": "1.1.x"
   },
   "scripts": {
-    "test": "nodeunit tests/test_leveldb.js tests/test_mysql.js",
+    "test": "nodeunit tests/test_leveldb.js tests/test_mysql.js tests/test_odataserver.js",
     "start": "sudo node -e 'require(\"./src/main.js\").start();'",
     "docs": "docco src/*.js test/*.js",
     "clean": "rm -rf docs; rm -rf mydb"
