--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   "scripts": {
     "test": "nodeunit tests/test_leveldb.js tests/test_mysql.js tests/test_odataserver.js",
     "start": "sudo node -e 'require(\"./src/main.js\").start();'",
-    "docs": "docco src/*.js test/*.js",
+    "docs": "docco src/*.js tests/*.js",
     "clean": "rm -rf docs; rm -rf mydb"
   },
   "keywords": [
