--- a/package.json
+++ b/package.json
@@ -36,10 +36,10 @@
     "npm": "1.1.x"
   },
   "scripts": {
-    "test": "node tests/test_leveldb.js; node tests/test_mysql.js; node tests/test_odataserver.js",
+    "test": "node tests/test_leveldb.js; node tests/test_mysql2.js; node tests/test_odataserver.js",
     "start": "sudo node -e 'require(\"./src/main.js\").start();'",
-    "docs": "docco src/*.js tests/*.js",
-    "clean": "rm -rf docs; rm -rf mydb"
+    "docco": "docco -o docco src/*.js tests/*.js",
+    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb"
   },
   "keywords": [
     "odata",
