Worked on mysql problem

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "npm": "1.1.x"
   },
   "scripts": {
-    "test": "node tests/test_leveldb.js; node tests/test_mysql.js; node tests/test_odataserver.js",
+    "test": "node tests/test_leveldb.js && node tests/test_mysql.js && node tests/test_odataserver.js",
     "start": "sudo node -e 'require(\"./src/main.js\").start();'",
     "docco": "docco -o docco src/*.js tests/*.js",
     "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb"
