--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "dependencies": {
     "underscore": "*",
     "mysql": "*",
-    "level": "*"
+    "level": "*",
+    "dtrace-provider" : "*"
   },
   "devDependencies": {
     "docco": "*",
@@ -37,7 +38,7 @@
   },
   "scripts": {
     "test": "node tests/test_leveldb.js && node tests/test_mysql.js && node tests/test_odataserver.js",
-    "start": "sudo node -e 'require(\"./src/main.js\").start();'",
+    "start": "sudo node -e 'require(\"./src/main2.js\").start();'",
     "docco": "docco -o docco src/*.js tests/*.js",
     "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb"
   },
