--- a/package.json
+++ b/package.json
@@ -37,9 +37,9 @@
     "npm": "1.1.x"
   },
   "scripts": {
-    "test": "node tests/test_main.js && node tests/test_leveldb.js && node tests/test_mysql.js ",
+    "test": "./run_tests.sh",
     "test2": "node tests/test_odataserver.js",
-    "start": "sudo node -e 'require(\"./src/main2.js\").start();'",
+    "start": "sudo node -e 'require(\"./src/main.js\").start();'",
     "docco": "docco -o docco src/*.js tests/*.js",
     "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb"
   },
