Fixed docker setup

--- a/src-docker/etc-supervisor-conf.d-supervisord.conf
+++ b/src-docker/etc-supervisor-conf.d-supervisord.conf
@@ -1,8 +1,8 @@
 [supervisord]
 nodaemon=true
 
-[program:odatamysql]
-command=/start-node.sh
+[program:odataserver]
+command=cd /src && npm start
 stdout_logfile=/var/log/supervisor/supervisord.log
 stderr_logfile=/var/log/supervisor/supervisord.log
 autorestart=true
@@ -22,7 +22,7 @@ autorestart=true
 
 ;
 ; Event listener used for running batches
-; 
+;
 ; available events are: TICK_5, TICK_60, TICK_3600
 ; More documentation here: http://supervisord.org/events.html#event-listeners-and-event-notifications
 ;
