--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "docco": "*",
     "nodeunit": "*",
     "travis-lint": "0.0.4",
-    "tape": "^3.0.3"
+    "tape": "^3.0.3",
+    "jscs":"*"
   },
   "engines": {
     "node": ">=0.10.x",
@@ -41,7 +42,8 @@
     "test2": "node tests/test_odataserver.js",
     "start": "sudo node -e 'require(\"./src/main.js\").start();'",
     "docco": "docco -o docco src/*.js tests/*.js",
-    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb"
+    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb",
+    "style": "./node_modules/.bin/jscs src/* tests/*"
   },
   "keywords": [
     "odata",
