--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "underscore": "*",
     "mysql": "*",
+    "nodemailer": "*",
     "level": "*",
     "dtrace-provider" : "*"
   },
@@ -40,7 +41,7 @@
   "scripts": {
     "test": "./run_tests.sh",
     "test2": "node tests/test_odataserver.js",
-    "start": "sudo node -e 'require(\"./src/main.js\").start();'",
+    "start": "sudo ./start.sh",
     "docco": "docco -o docco src/*.js tests/*.js",
     "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb",
     "style": "./node_modules/.bin/jscs src/*.js tests/test_mysql.js tests/test_leveldb.js tests/test_main.js tests/helpers.js tests/test_helpers.js tests/test_mssql.js"
