--- a/src-docker/etc-supervisor-conf.d-supervisord.conf
+++ b/src-docker/etc-supervisor-conf.d-supervisord.conf
@@ -2,7 +2,7 @@
 nodaemon=true
 
 [program:odataserver]
-command=cd /src && npm start
+command=/start.sh
 stdout_logfile=/var/log/supervisor/supervisord.log
 stderr_logfile=/var/log/supervisor/supervisord.log
 autorestart=true
