--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "mysql": "*",
     "nodemailer": "*",
     "level": "*",
-    "dtrace-provider" : "*",
-    "toobusy" : "*"
+    "dtrace-provider" : "*"
   },
   "devDependencies": {
     "docco": "*",
