--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "test": "./bin/run_tests.sh",
     "start": "sudo ./bin/start.sh",
     "docco": "./node_modules/.bin/docco -o docco src/*.js tests/*.js",
-    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb",
+    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb odataserver.min.js",
     "style": "./node_modules/.bin/jscs src/*.js tests/test_mysql.js tests/test_leveldb.js tests/test_main.js tests/helpers.js tests/test_helpers.js tests/test_mssql.js"
   },
   "keywords": [
