Added bin script

--- a/package.json
+++ b/package.json
@@ -20,6 +20,9 @@
     }
   ],
   "main": "src/main.js",
+  "bin" : {
+    "odataserver" : "./bin/start.sh"
+  }, 
   "dependencies": {
     "underscore": "*",
     "mysql": "*",
