--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "odataserver",
   "description": "OData server with support for BLOBs",
-  "version": "0.0.1",
+  "version": "0.0.3",
   "author": {
     "name": "Jonas Colmsjö",
     "email": "jonas@gizur.com"
@@ -21,8 +21,8 @@
   ],
   "main": "src/main.js",
   "bin" : {
-    "odataserver" : "./bin/start.sh"
-  }, 
+    "odataserver" : "./bin/odataserver"
+  },
   "dependencies": {
     "underscore": "*",
     "mysql": "*",
@@ -50,6 +50,7 @@
   },
   "keywords": [
     "odata",
-    "MySQL"
+    "MySQL",
+    "BLOBs"
   ]
 }
