Fixed format error of response

--- a/.travis.yml
+++ b/.travis.yml
@@ -30,3 +30,10 @@ env:
   global:
     - ADMIN_USER="root"
     - ADMIN_PASSWORD=""
+
+
+# Build the master brnch only
+branches:
+  only:
+    - master
+
