--- a/src-docker/etc-supervisor-conf.d-supervisord.conf
+++ b/src-docker/etc-supervisor-conf.d-supervisord.conf
@@ -1,20 +1,32 @@
 [supervisord]
-nodaemon=true
+nodaemon=false
+
+[program:rsyslogd]
+command=/usr/sbin/rsyslogd -n
+stdout_logfile=/var/log/rsyslog.log
+stderr_logfile=/var/log/rsyslog.log
+autorestart=true
+
+; The old configuration looked like this. Now using syslog.
+;
+; stdout_logfile=/var/log/supervisor/supervisord.log
+; stderr_logfile=/var/log/supervisor/supervisord.log
+;
 
 [program:odataserver]
 command=/start.sh
-stdout_logfile=/var/log/supervisor/supervisord.log
-stderr_logfile=/var/log/supervisor/supervisord.log
+stdout_logfile=syslog
+stderr_logfile=syslog
 autorestart=true
 
 [program:apache]
 command=/usr/sbin/apache2ctl -D FOREGROUND
-stdout_logfile=/var/log/supervisor/supervisord.log
-stderr_logfile=/var/log/supervisor/supervisord.log
+stdout_logfile=syslog
+stderr_logfile=syslog
 autorestart=true
 
 [program:mysql]
 command=/usr/bin/mysqld_safe
-stdout_logfile=/var/log/supervisor/supervisord.log
-stderr_logfile=/var/log/supervisor/supervisord.log
+stdout_logfile=syslog
+stderr_logfile=syslog
 autorestart=true
