Updated host and IP of syslog server

--- a/src-docker/etc-rsyslog.conf
+++ b/src-docker/etc-rsyslog.conf
@@ -67,4 +67,4 @@ $IncludeConfig /etc/rsyslog.d/*.conf
 #
 # @ means logging using UDP, @@ means loging using TCP
 #
-*.*   @rsyslog:514
+*.*   @beservices:5514
