--- a/env.list.template
+++ b/env.list.template
@@ -1,4 +1,4 @@
-ADMIN_USER="root"
-ADMIN_PASSWORD="secret"
-MAIL_USER="joe@example.com"
-MAIL_PASSWORD="yyy"
+ADMIN_USER=root
+ADMIN_PASSWORD=secret
+MAIL_USER=joe@example.com
+MAIL_PASSWORD=yyy
