--- a/config.js.template
+++ b/config.js.template
@@ -47,6 +47,13 @@
     // How long the reset password link is valid (using Date.now() to generate
     // timestamps)
     EXPIRE_RESET_PASSWORD: 24 * 60 * 60 * 1000,
+
+    // Setting this to `true` makes it possible for anyone to create an account.
+    // This must be set to `true` when running the tests
+    CREATE_ACCOUNTS_WITHOUT_CREDENTIALS: true,
+
+    // Should cross-origin requests be allowed
+    ALLOW_CORS: true
   };
 
   // HTTPS settings
