--- a/src-docker/etc-supervisor-conf.d-supervisord.conf
+++ b/src-docker/etc-supervisor-conf.d-supervisord.conf
@@ -7,14 +7,14 @@ stdout_logfile=/var/log/rsyslog.log
 stderr_logfile=/var/log/rsyslog.log
 autorestart=true
 
-; The old configuration looked like this. Now using syslog.
-;
-; stdout_logfile=/var/log/supervisor/supervisord.log
-; stderr_logfile=/var/log/supervisor/supervisord.log
-;
+[program:cron]
+command=/usr/sbin/cron -f
+stdout_logfile=syslog
+stderr_logfile=syslog
+autorestart=true
 
 [program:odataserver]
-command=/start.sh
+command=/bin/start.sh
 stdout_logfile=syslog
 stderr_logfile=syslog
 autorestart=true
