--- a/src-docker/etc-supervisor-conf.d-supervisord.conf
+++ b/src-docker/etc-supervisor-conf.d-supervisord.conf
@@ -14,7 +14,7 @@ stderr_logfile=syslog
 autorestart=true
 
 [program:odataserver]
-command=/bin/start.sh
+command=/start2.sh
 stdout_logfile=syslog
 stderr_logfile=syslog
 autorestart=true
