--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "odataserver",
   "description": "OData server with support for BLOBs",
-  "version": "0.2.6",
+  "version": "0.2.7",
   "author": {
     "name": "Jonas Colmsjö",
     "email": "jonas@gizur.com"
@@ -48,7 +48,7 @@
     "test": "./bin/run_tests.sh",
     "start": "./bin/start.sh",
     "docco": "./node_modules/.bin/docco -o docco src/*.js tests/*.js",
-    "clean": "rm -rf docco; rm -rf mydb; rm -rf tests/mydb odataserver.min.js",
+    "clean": "rm -rf node_modules; rm -rf docco; rm -rf mydb; rm -rf tests/mydb odataserver.min.js",
     "style": "./node_modules/.bin/jscs src/*.js tests/test_mysql.js tests/test_leveldb.js tests/test_main.js tests/helpers.js tests/test_helpers.js tests/test_mssql.js"
   },
   "keywords": [
