Need 1.0.0 version of LevelDb

--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "underscore": "*",
     "mysql": "*",
     "nodemailer": "*",
-    "level": "*",
+    "level": "1.0.0",
     "promise": "*"
   },
   "devDependencies": {
