--- a/env.list.template
+++ b/env.list.template
@@ -2,3 +2,7 @@ ADMIN_USER=root
 ADMIN_PASSWORD=secret
 MAIL_USER=joe@example.com
 MAIL_PASSWORD=yyy
+absolute_uri=http://localhost
+
+# For supervisor.conf
+# environment=absolute_uri="http://localhost"
