--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
   },
   "dependencies": {
     "underscore": "*",
-    "mysql": "*",
+    "mysql": "2.5.5",
     "nodemailer": "*",
     "level": "1.0.0",
     "promise": "*"
